--- a/about.html
+++ b/about.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <h1>Me</h1>
+    <h1>Jeniree Alvarez</h1>
+    <a href="/index.html">Back Homepage</a>
   </body>
 </html>
