--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Portafolio</title>
     <link rel="stylesheet" href="css/style.css" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
@@ -52,6 +52,11 @@
     </nav>
     <h1 class="text-center">About me</h1>
     <h3 class="text-center">Front-end developer from Cumana, Venezuela</h3>
+    <img
+      src="me.jpg"
+      class="rounded mx-auto d-block rounded float-end"
+      alt="photo of myself"
+    />
     <a href="/index.html">Back Homepage</a>
     <div id="contact" class="mt-5">
       <h2 class="text-center">📮 Contact me</h2>
