updated HTML and CSS

--- a/about.html
+++ b/about.html
@@ -52,11 +52,7 @@
     </nav>
     <h1 class="text-center">About me</h1>
     <h3 class="text-center">Front-end developer from Cumana, Venezuela</h3>
-    <img
-      src="me.jpg"
-      class="rounded mx-auto d-block rounded float-end"
-      alt="photo of myself"
-    />
+    <img src="me.jpg" alt="photo of myself" />
     <a href="/index.html">Back Homepage</a>
     <div id="contact" class="mt-5">
       <h2 class="text-center">📮 Contact me</h2>
