--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
     <h1 class="text-center">Jeniree A Castro</h1>
     <h3 class="text-center">Front-end developer, based in United States</h3>
     <div class="navigation-links mb-5">
-      <a href="about.html#contact" class="primary-link">Contact me</a>
-      <a href="about.html" class="secondary-link">About me</a>
+      <a href="about.html#contact" class="contact-link">Contact me</a>
+      <a href="about.html" class="about-link">About me</a>
     </div>
   </body>
 </html>
