--- a/index.html
+++ b/index.html
@@ -18,10 +18,9 @@
     ></script>
     <link rel="stylesheet" href="css/style.css" />
   </head>
-  <body>
     <nav class="navbar navbar-dark" style="background-color: #6f42c1">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Jeniree Alvarez</a>
+        <a class="navbar-brand fw-bold" href="index.html">Jeniree A Castro</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -50,12 +49,14 @@
         </div>
       </div>
     </nav>
+    <div class="hero">
     <h2 class="text-center">👋 Hi I am</h2>
-    <h1 class="text-center">Jeniree A Castro</h1>
-    <h3 class="text-center">Front-end developer, based in United States</h3>
+    <h1 class="text-center fw-bold">Jeniree A Castro</h1>
+    <h3 class="text-center fw-semibold">Front-end developer, based in United States</h3>
     <div class="navigation-links mb-5">
       <a href="about.html#contact" class="contact-link">Contact me</a>
       <a href="about.html" class="about-link">About me</a>
+    </div>
     </div>
   </body>
 </html>
