--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
   <body>
     <nav class="navbar navbar-dark" style="background-color: #6f42c1">
       <div class="container">
-        <a class="navbar-brand" href="index.html">Jeniree Alvarez</a>
+        <a class="navbar-brand" href="index.html">Jeniree A Castro</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -50,10 +50,11 @@
         </div>
       </div>
     </nav>
+    <a href="/index.html">Back Homepage</a>
     <h1 class="text-center">About me</h1>
     <h3 class="text-center">Front-end developer from Cumana, Venezuela</h3>
     <img src="me.jpg" alt="photo of myself" />
-    <a href="/index.html">Back Homepage</a>
+
     <div id="contact" class="mt-5">
       <h2 class="text-center">📮 Contact me</h2>
       <a href="mailto:dev.jenireealvarez@gmail.com" class="email-link">
