added img class

--- a/index.html
+++ b/index.html
@@ -49,14 +49,28 @@
         </div>
       </div>
     </nav>
+
     <div class="hero">
     <h2 class="text-center">👋 Hi I am</h2>
     <h1 class="text-center fw-bold">Jeniree A Castro</h1>
     <h3 class="text-center fw-semibold">Front-end developer, based in United States</h3>
+    <div class="flip-card">
+  <div class="flip-card-inner">
+    <div class="flip-card-front">
+    <img src="avatar.jpeg" alt="Avatar" width="200px">
+     </div>
+    <div class="flip-card-back">
+      <br>
+      <br>
+      <br>
+      <p> 👩‍💻📱💪 </p>
+      <p>Let's Work Together</p>
+    </div>
+  </div>
+</div>
     <div class="navigation-links mb-5">
       <a href="about.html#contact" class="contact-link">Contact me</a>
       <a href="about.html" class="about-link">About me</a>
-    </div>
     </div>
   </body>
 </html>
