added a new avatar

--- a/about.html
+++ b/about.html
@@ -53,7 +53,12 @@
     <a href="/index.html">Back Homepage</a>
     <h1 class="text-center">About me</h1>
     <h3 class="text-center">Front-end developer from Cumana, Venezuela</h3>
-
+    <p>
+      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam aperiam
+      provident tempora? Cumque adipisci, non dolorem quia, odit qui alias
+      veniam excepturi rem dolor fugit dignissimos, sed voluptatum blanditiis
+      harum.
+    </p>
     <div id="contact" class="mt-5">
       <h2 class="text-center">📮 Contact me</h2>
       <a href="mailto:dev.jenireealvarez@gmail.com" class="email-link">
