--- a/index.html
+++ b/index.html
@@ -57,14 +57,10 @@
     <div class="flip-card">
   <div class="flip-card-inner">
     <div class="flip-card-front">
-    <img src="avatar.jpeg" alt="Avatar" width="200px">
+    <img src="images/AvatarMaker.png" alt="Avatar" width="250px"s>
      </div>
     <div class="flip-card-back">
-      <br>
-      <br>
-      <br>
-      <p> 👩‍💻📱💪 </p>
-      <p>Let's Work Together</p>
+    <img src="images/avatar.jpeg" alt="Avatar" width="200px">
     </div>
   </div>
 </div>
@@ -72,5 +68,6 @@
       <a href="about.html#contact" class="contact-link">Contact me</a>
       <a href="about.html" class="about-link">About me</a>
     </div>
+
   </body>
 </html>
