--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <img src="images/AvatarMaker.png" alt="Avatar" width="250px"s>
      </div>
     <div class="flip-card-back">
-    <img src="images/avatar.jpeg" alt="Avatar" width="200px">
+    <img src="images/avatar.png" alt="Avatar" width="250px">
     </div>
   </div>
 </div>
