updated avatar and css

--- a/index.html
+++ b/index.html
@@ -57,10 +57,10 @@
     <div class="flip-card">
   <div class="flip-card-inner">
     <div class="flip-card-front">
-    <img src="images/AvatarMaker.png" alt="Avatar" width="250px"s>
+    <img src="images/AvatarMaker.png" alt="Avatar" width="200px"s>
      </div>
     <div class="flip-card-back">
-    <img src="images/avatar.png" alt="Avatar" width="250px">
+    <img src="images/Avatar.jpg" alt="Avatar" width="200px">
     </div>
   </div>
 </div>
