added cat website project

--- a/index.html
+++ b/index.html
@@ -68,6 +68,13 @@
       <a href="about.html#contact" class="contact-link">Contact me</a>
       <a href="about.html" class="about-link">About me</a>
     </div>
-
+    </div>
+<div class="container">
+  <div class="row">
+    <div class="col-6">
+      <a href="https://s3.amazonaws.com/shecodesio-production/challenge_submissions/files/000/534/115/original/kirara.html?1633935942" target="_blank"><img src="images/catwebsite.jpg" class="img-fluid p-2 mb-4 shadow rounded" alt="Cat Website"/> </a>
+    </div>
+  </div>
+</div> 
   </body>
 </html>
