--- a/index.html
+++ b/index.html
@@ -69,10 +69,19 @@
       <a href="about.html" class="about-link">About me</a>
     </div>
     </div>
+    <h2 class="text-center"> Projects</h2>
 <div class="container">
   <div class="row">
-    <div class="col-6">
+    <div class="col-sm-6">
       <a href="https://s3.amazonaws.com/shecodesio-production/challenge_submissions/files/000/534/115/original/kirara.html?1633935942" target="_blank"><img src="images/catwebsite.jpg" class="img-fluid p-2 mb-4 shadow rounded" alt="Cat Website"/> </a>
+      <p>  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam aperiam
+      provident tempora? Cumque adipisci, non dolorem quia, odit qui alias
+      veniam excepturi rem dolor fugit dignissimos, sed voluptatum blanditiis
+      harum.</p>
+    </div>
+    <div class="col-sm-6">
+      <a href="https://blissful-minsky-584121.netlify.app/" target="_blank"> <img src="images/weatherApp.jpg"class="img-fluid d-incline p-2 mb-4 shadow rounded" alt="Weather app"></a>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum blanditiis harum.</p>
     </div>
   </div>
 </div> 
