--- a/index.html
+++ b/index.html
@@ -69,21 +69,40 @@
       <a href="about.html" class="about-link">About me</a>
     </div>
     </div>
-    <h2 class="text-center"> Projects</h2>
+    <h1 class="text-center ms-6 p-4"> Projects</h1>
 <div class="container">
   <div class="row">
-    <div class="col-sm-6">
-      <a href="https://s3.amazonaws.com/shecodesio-production/challenge_submissions/files/000/534/115/original/kirara.html?1633935942" target="_blank"><img src="images/catwebsite.jpg" class="img-fluid p-2 mb-4 shadow rounded" alt="Cat Website"/> </a>
+    <div class="col-6 d-sm-block">
+      <h2 class="mb-5"> Cat Website 😸</h2>
       <p>  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam aperiam
       provident tempora? Cumque adipisci, non dolorem quia, odit qui alias
       veniam excepturi rem dolor fugit dignissimos, sed voluptatum blanditiis
       harum.</p>
+      <a href="https://s3.amazonaws.com/shecodesio-production/challenge_submissions/files/000/534/115/original/kirara.html?1633935942" class="btn btn-branding-outline" target="_blank">
+        Launch project
+      </a>
+      </div>
+        <div class="col-6">
+      <img src="images/catwebsite.jpg" class="img-fluid  d-none d-md-block" alt="Cat Website" />
     </div>
-    <div class="col-sm-6">
-      <a href="https://blissful-minsky-584121.netlify.app/" target="_blank"> <img src="images/weatherApp.jpg"class="img-fluid d-incline p-2 mb-4 shadow rounded" alt="Weather app"></a>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum blanditiis harum.</p>
+  </div>
+    <div class="container"> 
+      <div class="row">
+        <div class="col-6">
+          <img src="images/weatherApp.jpg" class="img-fluid p-4 d-none d-md-block" alt="Weather App" />
+        </div> 
+    <div class="col-6">
+      <h2 class="ms-4 p-4"> Weather App🌤️ </h2>
+      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum blanditiis harum.
+
+      </p>
+      <a href="https://blissful-minsky-584121.netlify.app/" class="btn btn-branding-outline" target="_blank"> Launch project </a>
     </div>
   </div>
 </div> 
+<p class="text-center mt-4">
+					This project was coded by Jeniree Alvarez and is
+					<a href="https://github.com/Jejexd/Portafolio.git" target="_blank">open-sourced</a>.
+				</p>
   </body>
 </html>
