updated CSS and HTML

--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
     ></script>
   </head>
   <body>
-    <nav class="navbar navbar-dark" style="background-color: #6f42c1">
+    <nav class="navbar navbar-dark" style="background-color: #394a51">
       <div class="container">
         <a class="navbar-brand" href="index.html">Jeniree A Castro</a>
         <button
