--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
     ></script>
     <link rel="stylesheet" href="css/style.css" />
   </head>
-    <nav class="navbar navbar-dark" style="background-color: #6f42c1">
+  <body> 
+    <nav class="navbar navbar-dark" style="background-color: #394a51">
       <div class="container">
         <a class="navbar-brand fw-bold" href="index.html">Jeniree A Castro</a>
         <button
@@ -54,52 +55,47 @@
     <h2 class="text-center">👋 Hi I am</h2>
     <h1 class="text-center fw-bold">Jeniree A Castro</h1>
     <h3 class="text-center fw-semibold">Front-end developer, based in United States</h3>
-    <div class="flip-card">
-  <div class="flip-card-inner">
-    <div class="flip-card-front">
-    <img src="images/AvatarMaker.png" alt="Avatar" width="200px"s>
-     </div>
-    <div class="flip-card-back">
-    <img src="images/Avatar.jpg" alt="Avatar" width="200px">
-    </div>
-  </div>
-</div>
+    <img src="images/AvatarMaker.png" class="rounded mx-auto d-block" alt="Avatar" width="200px"s>
     <div class="navigation-links mb-5">
       <a href="about.html#contact" class="contact-link">Contact me</a>
       <a href="about.html" class="about-link">About me</a>
     </div>
-    </div>
-    <h1 class="text-center ms-6 p-4"> Projects</h1>
-<div class="container">
-  <div class="row">
-    <div class="col-6 d-sm-block">
-      <h2 class="mb-5"> Cat Website 😸</h2>
-      <p>  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam aperiam
+  </div>
+   <div class="container">
+      <div class="row mb-5">
+        <div class="col d-none d-lg-block">
+          <img src="images/catwebsite.jpg" class="img-fluid" alt="Cat Website" width="300px" />
+        </div>
+        <div class="col">
+          <div class="project-desciption">
+            <h2 class="mb-5">Cat Website</h2>
+            <p class="mb-5">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam aperiam
       provident tempora? Cumque adipisci, non dolorem quia, odit qui alias
       veniam excepturi rem dolor fugit dignissimos, sed voluptatum blanditiis
-      harum.</p>
-      <a href="https://s3.amazonaws.com/shecodesio-production/challenge_submissions/files/000/534/115/original/kirara.html?1633935942" class="btn btn-branding-outline" target="_blank">
-        Launch project
-      </a>
+      harum
+            </p>
+            <a href="https://s3.amazonaws.com/shecodesio-production/challenge_submissions/files/000/534/115/original/kirara.html?1633935942" class="btn btn-branding-outline"> Launch project </a>
+          </div>
+        </div>
       </div>
-        <div class="col-6">
-      <img src="images/catwebsite.jpg" class="img-fluid  d-none d-md-block" alt="Cat Website" />
-    </div>
-  </div>
-    <div class="container"> 
-      <div class="row">
-        <div class="col-6">
-          <img src="images/weatherApp.jpg" class="img-fluid p-4 d-none d-md-block" alt="Weather App" />
-        </div> 
-    <div class="col-6">
-      <h2 class="ms-4 p-4"> Weather App🌤️ </h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam aperiam provident tempora? Cumque adipisci, non dolorem quia, odit qui alias veniam excepturi rem dolor fugit dignissimos, sed voluptatum blanditiis harum.
-
-      </p>
-      <a href="https://blissful-minsky-584121.netlify.app/" class="btn btn-branding-outline" target="_blank"> Launch project </a>
-    </div>
-  </div>
-</div> 
+      <div class="row mb-5">
+        <div class="col">
+          <div class="project-desciption">
+            <h2 class="mb-5">Weather App</h2>
+            <p class="mb-5">
+           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam aperiam
+      provident tempora? Cumque adipisci, non dolorem quia, odit qui alias
+      veniam excepturi rem dolor fugit dignissimos, sed voluptatum blanditiis
+      harum
+            </p>
+            <a href="https://blissful-minsky-584121.netlify.app/" class="btn btn-branding-outline"> Launch project </a>
+          </div>
+        </div>
+        <div class="col d-none d-lg-block">
+          <img src="images/weatherapp.jpg" class="img-fluid" alt="Weather App" width="300px" />
+        </div>
+      </div>
 <p class="text-center mt-4">
 					This project was coded by Jeniree Alvarez and is
 					<a href="https://github.com/Jejexd/Portafolio.git" target="_blank">open-sourced</a>.
